Fix horizontal scroll bar

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -283,7 +283,7 @@ pre {
     .profile-section .profile-image {
         display: block;
         margin: auto;
-        max-width: 60%;
+        max-width: 20%;
         height: auto;
     }
 
